--- a/css_advanced/styles.css
+++ b/css_advanced/styles.css
@@ -1,151 +1,165 @@
-/* General styles */
-
-body{
-
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
-    background-image: url(Object.png) ;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    text-align: center;
+    box-sizing: border-box;
 }
-header{
- 
-    padding: 10px 20px;
-    
 
+body {
+    font-family: Arial, sans-serif;
+    line-height: 1.6;
+    color: #333;
 }
-.navbar {
+
+.hero {
+    background: url(Object.png) no-repeat center center/cover;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+    position: relative;
+}
+
+.header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-
-
-}
-.logo img { 
-    height: 35px;
-    
-
-} 
-.nav-links {
-    list-style-type: none;
-    display: flex;
-}  
-.nav-links li {
-    margin-left: 17px;
-}
-.nav-links a {
-    text-decoration: none;
-    color: #fff;
-    padding: 9px;
+    padding: 20px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
-h3 {
-    font-size: 1.5em;
-    margin: 0.5em 0;
-}
-
-p {
-    font-size: 1em;
-    margin: 0.5em 0;
-}
-
-img {
-    width: 100%;
-    height: auto;
-}
-
-.container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding: 2em 0;
-}
-
-.card {
-    background-color: #2c2c2c;
-    border-radius: 10px;
-    margin: 1em;
-    padding: 1em;
-    width: 250px;
-    text-align: left;
-}
-
-.card img {
-    border-radius: 10px;
-}
-
-.card h4 {
-    margin: 0.5em 0 0;
-}
-
-.card .author {
-    display: flex;
-    align-items: center;
-    margin-top: 1em;
-}
-
-.card .author img {
-    width: 50px;
+.header .logo {
     height: 50px;
-    border-radius: 50%;
-    margin-right: 1em;
 }
 
-.card .rating {
-    display: flex;
-    margin-top: 1em;
-}
-
-.card .rating div {
-    color: gold;
-    margin-right: 0.2em;
-}
-
-/* Header styles */
-header {
-    background: url('./images/header-background.jpg') no-repeat center center/cover;
-    color: #fff;
-    padding: 5em 0;
-}
-
-header h1 {
-    font-size: 3em;
-    margin: 0.5em 0;
-}
-
-header p {
-    font-size: 1.2em;
-}
-
-.header-buttons {
-    margin-top: 1em;
-}
-
-.header-buttons .btn {
-    background-color: #6c63ff;
-    border: none;
-    border-radius: 25px;
-    color: white;
-    padding: 0.75em 2em;
-    margin: 0.5em;
+.nav a {
+    margin: 0 10px;
     text-decoration: none;
-    font-size: 1em;
+    color: white;
 }
 
-.header-buttons .btn:hover {
-    background-color: #5953d9;
+.hero-content {
+    margin-top: 150px; /* Adjust as needed */
 }
 
-/* Footer styles */
-footer {
-    background-color: #2c2c2c;
-    padding: 2em 0;
+.hero h1 {
+    font-size: 3em;
+    margin-bottom: 0.5em;
 }
 
-footer p {
-    margin: 0;
-    font-size: 0.8em;
+.hero h2 {
+    font-size: 1.5em;
+    margin-bottom: 1em;
+}
+
+.register-btn {
+    background: #a349a4;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.learn {
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.learn .pro-cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.learn .pro-card {
+    margin: 20px;
+    text-align: center;
+}
+
+.testimonial {
+    background: #d4a3d4;
+    color: white;
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.testimonial img {
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-top: 20px;
+}
+
+.tutorials {
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.tutorials .tutorial-cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.tutorials .tutorial-card {
+    margin: 20px;
+    text-align: center;
+}
+
+.membership {
+    background: #222;
+    color: white;
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.membership .membership-cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.membership .membership-card {
+    margin: 20px;
+    text-align: center;
+}
+
+.faq {
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.faq .faq-cards {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.faq .faq-card {
+    margin: 20px;
+    text-align: left;
+    width: 200px;
+}
+
+.footer {
+    background: #222;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+.footer .logo {
+    height: 40px;
+    margin-bottom: 10px;
+}
+
+.footer .social-icons a {
+    margin: 0 10px;
+    display: inline-block;
+}
+
+.footer .social-icons img {
+    width: 30px;
+    height: 30px;
 }
